2008-09-08  Christian Dywan  <christian@imendio.com>

	Bug 550433 – g_test_init doesn't recognize --help

	* glib/gtestutils.c (parse_args): Add detailed --help output

2008-09-02  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

	* === Released 2.18.0 ===

2008-09-02  Ryan Lortie  <desrt@desrt.ca>

	Bug 549771 – improved .gitignore for glib

	* docs/reference/.gitignore:
	* docs/reference/gio/.gitignore:
	* docs/reference/gobject/tmpl/.gitignore:
	* gio/.gitignore:
	* gio/tests/.gitignore:
	* glib/.gitignore:
	* glib/libcharset/.gitignore:
	* glib/tests/.gitignore:
	* gmodule/.gitignore:
	* gobject/.gitignore:
	* gobject/tests/.gitignore:
	* po/.gitignore:
	* tests/.gitignore: new files
	* .gitignore: remove 'build' (since it's part of glib now), add more
	useful things.

2008-09-02  Matthias Clasen  <mclasen@redhat.com>

	* NEWS: Updates

	* configure.in: Bump version to 2.18.0

2008-09-02  Matthias Clasen  <mclasen@redhat.com>

	Bug 550104 – trivial documentation fix for g_get_home_dir

	* glib/gutils.c (g_get_home_dir): Fix up the docs.

2008-09-02  Michael Natterer  <mitch@imendio.com>

	* glib/gchecksum.c (g_checksum_reset): add
	g_return_if_fail (checksum != NULL)

2008-09-01  Paolo Borelli  <pborelli@katamail.com>

	Bug 550040 - Move GString, rand and printf tests to the unit test
	framework

	* tests/printf-test.c:
	* tests/rand-test.c:
	* tests/string-test.c:
	Removed

	* glib/tests/printf.c:
	* glib/tests/rand.c:
	* glib/tests/string.c:
	Added

	* tests/Makefile.am:
	* glib/tests/Makefile.am:
	Updated for the above

2008-08-31  Emmanuele Bassi  <ebassi@gnome.org>

	Bug 550096 – GBookmarkFile parser is not forward compatible

	* glib/gbookmarkfile.c:
	(parse_bookmark_element), (parse_application_element),
	(parse_mime_type_element), (parse_icon_element): Relax the
	attributes checking of the GBookmarkFile parser for the
	attributes that the desktop bookmark file specification
	defines and controls. This allows adding new attributes to